refactor: 重构Bean Copy逻辑